# TradingAgents

./: .gitignore  CLAUDE.md  Dockerfile.agentcore  Dockerfile.lambda  buildspec.brokerage.yml  buildspec.yml  main.py  pyproject.toml
.claude/skills/brokerage-refresh/: SKILL.md  refresh.py
.claude/skills/md-store-sync/: SKILL.md
brokerage_mcp/: Dockerfile  README.md  pyproject.toml
brokerage_mcp/brokerage_mcp/: __init__.py  auth.py  cache.py  server.py  tools.py
brokerage_mcp/brokerage_mcp/schwab/: client.py  endpoints.py
brokerage_mcp/brokerage_mcp/tastytrade/: client.py  endpoints.py
brokerage_mcp/tests/: test_schemas.py  test_tools_fallback.py
cli/: utils.py
docs/: architecture.md  brokerage-mcp.md  observability.md
infra/: .gitignore  cdk.context.json  cdk.json  e2e-deep-watchlist.json  e2elarge-watchlist.json  package-lock.json  package.json  smoke-watchlist.json  tsconfig.json  watchlist.json
infra/dashboards/: fleet.ndjson  run.ndjson  ticker.ndjson
infra/lib/: tradingagents-stack.ts
tradingagents/: gateway_client.py
tradingagents/agentcore/: __init__.py  app.py  bedrock_rates.py  replay_report.py  report_format.py  report_writer.py  task_runner.py  token_tracker.py
tradingagents/dataflows/: alpha_vantage_common.py  interface.py  stockstats_utils.py
tradingagents/graph/: prefetch.py  propagation.py  setup.py  trading_graph.py
tradingagents/llm_clients/: bedrock_client.py  model_catalog.py  validators.py
tradingagents/observability/: __init__.py  attributes.py  instruments.py  langgraph_wrapper.py  tracing.py
(+33 files in other folders)
