[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brokerage-mcp"
version = "0.1.0"
description = "Read-only MCP server over Schwab + Tastytrade brokerage APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "tenacity>=8.2,<10.0",
    "cachetools>=5.3,<6.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
brokerage-mcp = "brokerage_mcp.server:main"

[tool.setuptools.packages.find]
include = ["brokerage_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
